<resources>

    <string name="app_name">Snackiller商户端V1.0-回归测试版</string>
    <string name="showpageText">Snackiller</string>
    <string name="orderListDetail"> 订单详情</string>
    <string name="acceptOrderList">接受订单</string>
    <string name="cancellReturn">缺货返回</string>
    <string name="goToDetail">查看详情</string>
    <string name="orderListView">订单列表</string>
    <string name="inputThePhone">请输入手机号码</string>
    <string name="inputThePassword">请输入密码(6到20位数字或字母)</string>
    <string name="saleLogin">登陆</string>
    <string name="goToRegister">没有账号？请点击注册</string>
    <string name="saleInfo">商户中心</string>
    <string name="uploadGood">上传商品</string>
    <string name="changeGood">查看商品</string>
    <string name="startAccept">开启接单</string>
    <string name="closeAccept">关闭接单</string>
    <string name="goToListView">查看订单详情</string>
    <string name="saleRegister">注册</string>
    <string name="saleName">商户名称</string>
    <string name="saleAddress">商户地址</string>
    <string name="confirmPassword">请确认密码(6到20位数字或字母)</string>
    <string name="updateSalePassword">修改密码(6到20位数字或字母)</string>
    <string name="updateSalePasswordTitle">修改密码</string>
    <string name="inputTheOldPassword">请输入原密码(6到20位数字或字母)</string>
    <string name="newPassword1">请输入新密码(6到20位数字或字母)</string>
    <string name="newPassword2">请确认新密码(6到20位数字或字母)</string>
    <string name="saveButton">保存</string>
    <string name="updateSalePhone">修改手机号码</string>
    <string name="SalePhone">手机号码</string>
    <string name="SaleName">商户名称</string>
    <string name="updateSaleName">修改商户名称</string>
    <string name="SaleAddress">商户地址</string>
    <string name="updateSaleAddress">修改商户地址</string>
    <string name="updateSaleInfoTitle">商户信息更新</string>
    <string name="logout">退出登录</string>
    <string name="SalePassword">密码修改</string>
    <string name="openGallery">打开相册</string>
    <string name="updateSalePictureTitle">商户照片修改</string>
    <string name="saveChange">保存</string>
    <string name="uploadNewGoodTop">上传商品</string>
    <string name="inputTheGoodName">请输入商品名称</string>
    <string name="inputTheGoodPrice">请输入商品价格</string>
    <string name="inputTheGoodSale">请输入商品折扣</string>
    <string name="saveNewGood">保存商品</string>
    <string name="nonephoto">图片已损坏或不存在</string>
    <string name="uploadjpg">请上传jpg格式图片~</string>
    <string name="failupdatebigfile">文件大小不能超过1MB</string>
    <string name="minCost">最低起送价</string>
    <string name="goodListTitle">商品列表</string>
    <string name="goodItemEdit">删除商品</string>
    <string name="failgetgoodslist">没有更多商品了！</string>
    <string name="soft_update_no">您的软件已经是最新版本</string>
	<string name="soft_update_title">软件更新</string>
	<string name="soft_update_info">检测到新版本,立即更新吗?</string>
	<string name="soft_update_updatebtn">更新</string>
	<string name="soft_update_later">稍后更新</string>
	<string name="soft_updating">正在更新</string>
	<string name="soft_update_cancel">取消</string>
	<string name="updateAppCheck">软件更新</string>
</resources>
