<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/whiteBg"
                android:orientation="vertical" >
    <Button
            android:id="@+id/registerTop"
            android:layout_width="fill_parent"
            android:layout_height="55dip"
            android:background="@color/buttonColor"
            android:text="@string/saleRegister"
            android:textColor="@color/btnTextColor"
            android:textSize="20sp"
            android:enabled="false"
            />
    <EditText
            android:hint="@string/inputThePhone"
            android:background="@color/editBg"
            android:id="@+id/registerPhone"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/registerTop"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginBottom="1dp"
            android:textSize="15sp"
            android:maxLength="11"
            android:drawablePadding="10dp"
            android:singleLine="true"
            android:inputType="phone"
            android:paddingLeft="20dp"
                        />
    <EditText
            android:hint="@string/saleName"
            android:background="@color/editBg"
            android:id="@+id/registerName"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/registerPhone"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginBottom="1dp"
            android:textSize="15sp"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:singleLine="true"
            android:maxLength="25"
            android:paddingLeft="20dp"
            />
    <EditText
            android:hint="@string/saleAddress"
            android:background="@color/editBg"
            android:id="@+id/registerAddress"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/registerName"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginBottom="1dp"
            android:textSize="15sp"
            android:maxLength="25"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:singleLine="true"
            android:paddingLeft="20dp"

            />
        <EditText
            android:hint="@string/minCost"
            android:background="@color/editBg"
            android:id="@+id/minCost"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/registerAddress"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginBottom="1dp"
            android:textSize="15sp"
            android:drawablePadding="10dp"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:paddingLeft="20dp"
            />
    <EditText
            android:hint="@string/inputThePassword"
            android:background="@color/editBg"
            android:id="@+id/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/minCost"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginBottom="1dp"
            android:textSize="15sp"
            android:password="true"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:singleLine="true"
            android:paddingLeft="20dp"
            />
    <EditText
            android:hint="@string/confirmPassword"
            android:background="@color/editBg"
            android:id="@+id/registerConfirm"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/registerPassword"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:textSize="15sp"
            android:password="true"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:singleLine="true"
            android:paddingLeft="20dp"
            />
    
    <Button
            android:id="@+id/registerButton"
            android:layout_width="fill_parent"
            android:layout_height="55dip"
            android:layout_below="@id/registerConfirm"
            android:layout_margin="15dip"
            android:text="@string/saleRegister"
            android:textSize="20sp"
            android:textColor="@color/btnTextColor"
            android:padding="5dip"
            android:background="@color/buttonColor"
            />

</RelativeLayout>