<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/whiteBg"
                android:orientation="vertical" >
       <RelativeLayout
	            android:layout_width="fill_parent"
	            android:layout_height="55dip"
	            android:background="@color/frame">


	        <TextView
	                android:id="@+id/updateSalePasswordTitle"
	                android:text="@string/updateSalePassword"
	                android:background="@color/frame"
	                android:layout_width="fill_parent"
	                android:layout_height="55dip"
	                android:layout_centerVertical="true"
                    android:gravity="center_vertical|center_horizontal"
	                android:layout_marginTop="20dp"
	                android:textColor="@color/titleText"
	                android:textSize="20sp"/>

	        <ImageButton
	                android:id="@+id/updatePasswordReturnButton"
	                android:src="@drawable/pre_btn"
	                android:background="@null"
	                android:layout_width="40dp"
	                android:layout_height="40dp"
	                android:layout_marginLeft="10dip"
	                android:layout_centerVertical="true"/>

    </RelativeLayout>


    <EditText
            android:hint="@string/newPassword1"
            android:background="@color/editBg"
            android:id="@+id/updateSalePassword"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginBottom="1dp"
            android:textSize="15sp"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:password="true"
            android:singleLine="true"
            android:paddingLeft="20dp"
            />
    <EditText
            android:hint="@string/newPassword2"
            android:background="@color/editBg"
            android:id="@+id/updateConfirmSalePassword"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginBottom="1dp"
            android:textSize="15sp"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:password="true"
            android:singleLine="true"
            android:paddingLeft="20dp"

            />
 
    <Button
            android:id="@+id/SaveUploadSalePassword"
            android:layout_width="fill_parent"
            android:layout_height="55dip"
            android:layout_marginTop="25dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginBottom="1dp"
            android:text="@string/saveButton"
            android:textSize="20sp"
            android:textColor="@color/btnTextColor"
            android:padding="5dip"
            android:background="@color/buttonColor"
            />

</LinearLayout>