<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/whiteBg"
                android:orientation="vertical" >
       <RelativeLayout
	            android:layout_width="fill_parent"
	            android:layout_height="55dip"
	            android:background="@color/frame">

	        <TextView
	                android:id="@+id/updateSaleAddressTitle"
	                android:text="@string/updateSaleAddress"
	                android:background="@color/frame"
	                android:layout_width="fill_parent"
	                android:layout_height="55dip"
	                android:layout_centerVertical="true"
	                android:gravity="center_vertical|center_horizontal"
	                android:layout_marginTop="25dp"
	                android:textColor="@color/titleText"
	                android:textSize="20sp"/>
	        	        <ImageButton
	                android:id="@+id/updateSaleAddressReturnButton"
	                android:src="@drawable/pre_btn"
	                android:background="@null"
	                android:layout_width="40dp"
	                android:layout_height="40dp"
	                android:layout_marginLeft="10dip"
	                android:layout_centerVertical="true"/>

    </RelativeLayout>

    <EditText
            android:hint="@string/SaleAddress"
            android:background="@color/editBg"
            android:id="@+id/updateSaleAddress"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginBottom="1dp"
            android:textSize="15sp"
            android:drawablePadding="10dp"
            android:maxLength="25"
            android:singleLine="true"
             android:inputType="text"
            android:paddingLeft="20dp"
     />


 
    <Button
            android:id="@+id/SaveUploadSaleAddress"
            android:layout_width="fill_parent"
            android:layout_height="55dip"
            android:layout_marginTop="25dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginBottom="1dp"
            android:text="@string/saveButton"
            android:textSize="20sp"
            android:textColor="@color/btnTextColor"
            android:padding="5dip"
            android:background="@color/buttonColor"
            />

</LinearLayout>