<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/whiteBg"
              android:orientation="vertical" >
              
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="55dip"
            android:background="@color/frame">
            
            <TextView
                android:id="@+id/saleText"
                android:text="@string/saleInfo"
                android:background="@color/frame"
                android:layout_width="fill_parent"
                android:layout_height="55dip"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/titleText"
                android:textSize="20sp"/>
            <ImageButton
                android:id="@+id/mySetting"
                android:src="@drawable/my_setting"
                android:background="@null"
                android:layout_marginLeft="310dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
              android:layout_height="115dip"
              android:orientation="horizontal" >
          <ImageView 
            android:id="@+id/saleImage"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_marginLeft="15dip"

            android:layout_gravity="center_vertical"
            android:src="@drawable/logo"
            />
          <LinearLayout  android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="5dip"
              android:layout_marginRight="5dip"
              android:orientation="vertical" >
              <TextView
	            android:id="@+id/salesInfo"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="全家便利店"
	            android:textSize="20sp"
	            android:layout_marginTop="15dip"
	            android:layout_marginLeft="10dp"
	            android:textColor="@android:color/black"
                        />
			    <TextView
			       android:id="@+id/salesAddress"
			       android:layout_width="fill_parent"
			       android:layout_height="wrap_content"
			       android:layout_marginTop="10dp"
			       android:layout_marginBottom="25dp"
			       android:textSize="15sp"
			       android:text="北京市朝阳区酒仙桥路6号院就是这么远的距离   15940389032"
				   android:layout_marginLeft="15dp"
				   android:lines="2"
				   android:textColor="@android:color/secondary_text_light_nodisable"
						
			        />
                          
          </LinearLayout>
        
        </LinearLayout>
       
    
   
    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/editBg"
            />
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >


            <Button
                    android:id="@+id/uploadButton"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@color/viewButton"
                    android:layout_marginTop="40dip"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:layout_marginBottom="1dp"
                    android:drawableRight="@drawable/next_btn"
                    android:text="@string/uploadGood"
                    android:textSize="20sp"
                    android:gravity="left|center_vertical"
                     android:paddingLeft="20dp"
                    />


            <Button
                    android:id="@+id/changeButton"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@color/viewButton"
                    android:drawableRight="@drawable/next_btn"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:layout_marginBottom="1dp"
                    android:layout_below="@id/uploadButton"
                    android:text="@string/changeGood"
                     android:paddingLeft="20dp"
                    android:gravity="left|center_vertical"
					android:textSize="20sp"
                    />

                <Button
                    android:id="@+id/acceptButton"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/changeButton"
                    android:background="@color/viewButton"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:layout_marginBottom="1dp"
                    android:drawableRight="@drawable/switchoff"
                    android:text="@string/startAccept"
                    android:gravity="left|center_vertical"
                    android:textSize="20sp"
                     android:paddingLeft="20dp"
                    />
                <Button
                    android:id="@+id/closeButton"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@color/viewButton"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:layout_marginBottom="1dp"
                    android:text="@string/closeAccept"
                    android:drawableRight="@drawable/switchon"
                    android:layout_below="@id/changeButton"
                    android:gravity="left|center_vertical"
                    android:textSize="20sp"
                     android:paddingLeft="20dp"
                    />
 
            
                <Button
		            android:id="@+id/orderListButton"
		            android:layout_width="fill_parent"
		            android:layout_height="55dip"
		            android:layout_below="@id/acceptButton"
		            android:layout_margin="15dip"
		            android:text="@string/goToListView"
		            android:textColor="@color/btnTextColor"
		            android:padding="5dip"
		            android:background="@color/buttonColor"
		            android:textSize="20sp"
               />

    </RelativeLayout>


</LinearLayout>
